crates/lyra-tests/tests/snapshots/corpus__lrm__3__3.14.2.1__timescale_directive__malformed_payload.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.preprocess.error] 1:0..1:10: `timescale directive missing time unit and precision
---
unit (0 diagnostics)
