crates/lyra-tests/tests/snapshots/corpus__lrm__3__3.14.2.1__timescale_directive__precision_exceeds_unit.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.preprocess.timescale_precision_exceeds_unit] 1:0..1:20: `timescale precision (1ns) must not exceed time unit (1ps)
---
unit (0 diagnostics)
